# SDL2pp

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/SDL2pp/: a8.h  argb8888.h  b8.h  bit_depth.h  blend_mode.h  byte_depth.h  color.h  display_mode.h  error.h  event.h  event_queue.h  event_type.h  events_subsystem.h  g8.h  hertz.h  image.h  index8.h  key_code.h  key_modifier.h  keyboard_event.h  length.h  palette.h  pixel_format.h  pixel_format_traits.h  quantity.h  r8.h  renderer.h  renderer_flags.h  rgba8888.h  scan_code.h  sdl.h  size.h  surface.h  texture.h  texture_access.h  video_subsystem.h  window.h  window_flags.h
samples/: CMakeLists.txt  plasma_fractal.cpp  stopwatch.cpp  stopwatch.h  tunnel_effect.cpp
samples/plasma_fractal/: CMakeLists.txt  main.cpp  plasma_fractal.cpp
samples/shared/: math.cpp  math.h  stopwatch.cpp  stopwatch.h
sources/: argb8888.cpp  blend_mode.cpp  color.cpp  display_mode.cpp  event.cpp  event_queue.cpp  hertz.cpp  index8.cpp  keyboard_event.cpp  length.cpp  palette.cpp  renderer.cpp  renderer_flags.cpp  sdl.cpp  size.cpp  surface.cpp  texture.cpp  window.cpp
src/: argb8888.cpp  color.cpp  error.cpp  event.cpp  events_subsystem.cpp  renderer.cpp  rgba8888.cpp  sdl.cpp  sdl2pp.cpp  video_subsystem.cpp  window.cpp  window_flags.cpp
tests/: CMakeLists.txt  global_fixture.cpp  test_argb8888.cpp  test_color.cpp  test_main.cpp  test_palette.cpp  test_renderer.cpp  test_surface.cpp  test_texture.cpp  test_window.cpp
